Absolute grid snapping doesn't work with the move tool axes. #80677

Closed
opened 2020-09-11 02:12:29 +02:00 by CobraA · 8 comments

System Information

Windows 10 64 Bits.
Graphics card GeForce GTX 1080 Ti.

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10 15:06, hash: 60e102c0a0

Short description of error
{F8863609 size = full}
Exact steps for others to reproduce the error

Enable absolute grid snapping option in the pop-over.
Drag the object from a single axis (doesn't work).
Drag from the center (freeform) it works.

**System Information** Windows 10 64 Bits. Graphics card GeForce GTX 1080 Ti. **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10 15:06, hash: `60e102c0a0` **Short description of error** {[F8863609](https://archive.blender.org/developer/F8863609/DA.gif) size = full} **Exact steps for others to reproduce the error** Enable absolute grid snapping option in the pop-over. Drag the object from a single axis (doesn't work). Drag from the center (freeform) it works.
Author

Added subscriber: @CobraA

Added subscriber: @CobraA

#80744 was marked as duplicate of this issue

#80744 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-09-11 23:09:02 +02:00

I can confirm.
This used to work until recently.

I can confirm. This used to work until recently.

This issue was referenced by 4eda60c2d8

This issue was referenced by 4eda60c2d82de0d7f7ded8ddf1036aea040e9c0d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @Tva, @zelfit

Added subscribers: @Tva, @zelfit
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80677
No description provided.