Fix T80677: Absolute grid snapping doesn't work with constraints

Regression introduced in rB546b900194f0